--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,6 +1,6 @@
 <header class="mb-5" style="box-shadow: 0 1rem 0.9rem grey">
-  <nav class="navbar navbar-expand-md navbar-dark bg-success">
-    <a class="navbar-brand" href="/urls">TinyApp</a>
+  <nav class="navbar navbar-expand-md navbar-dark bg-success py-3" style="font-size:1.2rem">
+    <a class="navbar-brand py-0 pl-2 pr-4 border-right" href="/urls" style="font-size:1.8rem">TinyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -14,14 +14,14 @@
         <div class="form-inline">
           <span style="color:rgba(255,255,255,.5);height:fit-content">Logged in as <%= user.email %></span>
           <form action="/logout" method="POST">
-            <button type="submit" id="logout-button" class="btn btn-outline-light ml-4 btn-sm">Log Out</button>
+            <button type="submit" id="logout-button" class="btn btn-outline-light ml-4" style="font-size:1.2rem">Log Out</button>
           </form>
         </div>
         <!-- otherwise, show the login form -->
       <% } else { %>
       <div>
-        <a class="btn btn-outline-light btn-sm mr-2" href="/login" role="button">Log in</a>
-        <a class="btn btn-outline-light btn-sm" href="/register" role="button">Sign up</a>
+        <a class="btn btn-outline-light btn-sm mr-2" href="/login" role="button" style="font-size:1.2rem">Log in</a>
+        <a class="btn btn-outline-light btn-sm" href="/register" role="button" style="font-size:1.2rem">Sign up</a>
       </div> 
       <% } %>
     </div>
