--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -14,14 +14,36 @@
           <h3 class="card-title display-3">TinyURL <a class="ml-2" href="/u/<%= shortURL %>"><%= shortURL %></a></h3>
         </div>
       </div>
-      <div class="card-body">
+      <div class="card-body align-items-center">
         <h4 class="card-title display-4" style="font-size:3.2rem">Shortens</h4>
         <span class="lead" style="font-size:2.2rem"> <%= longURL %></span>
       </div>
-    <div class="card-footer py-0 text-muted">
-      <h3 class="my-3">Update the URL linked to <%= shortURL %></h3>
-      <div class="row justify-content-center">
-          <%- include('partials/_longURLForm') %>
+
+
+    <div class="card-footer text-muted">
+      <div class="row align-items-center">
+        <div class="col-lg-5">
+          <div>
+            <div class="card">
+              <div class="card-body">
+                <div class="pb-3 border-bottom">
+                  <h5 class="card-title">Created</h5>
+                  <p class="card-text"><%= creationDate %></p>
+                </div>
+                <div class="mt-3">
+                  <h5 class="card-title">Visits</h5>
+                  <p class="card-text"><%= visits.toLocaleString() %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-7">
+          <h3 class="my-3">Update the URL linked to <%= shortURL %></h3>
+          <div class="row justify-content-center">
+              <%- include('partials/_longURLForm') %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
