--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,6 +27,7 @@
               <th scope="col">Short URL</th>
               <th scope="col">Long URL</th>
               <th scope="col">Date created</th>
+              <th scope="col">Visits</th>
               <th scope="col">Edit</th>
               <th scope="col">Delete</th>
             </tr>
@@ -37,6 +38,7 @@
               <% const shortURL = url[0] %> 
               <% const longURL = url[1]['longURL'] %>
               <% const date = url[1]['creationDate'] %>
+              <% const visits = url[1]['visits'] %>
               <% const res = regex.exec(longURL) %>
               <tr>
                 <td class="align-middle">
@@ -54,6 +56,7 @@
                   </a>
                 </td>
                 <td class="align-middle text-center"><%= date %></td>
+                <td class="align-middle text-center"><%= visits.toLocaleString() %></td>
                 <td class="align-middle text-center">
                   <a class="btn btn-outline-warning btn-sm btn-block" href="/urls/<%= shortURL %>">
                     Edit <%= shortURL %>
