--- a/views/register_new_user.ejs
+++ b/views/register_new_user.ejs
@@ -9,26 +9,40 @@
 </head>
 <body>
   <%- include('partials/_header') %>
-  <main style="margin: 1em;">
-    <div class="row justify-content-center mb-0">
-      <form action="/register" method="POST">
-        <fieldset class="">
-          <div class="row justify-content-center">
-            <legend style="width:fit-content">Register your account</legend>
-          </div>
-          <div class="form-inline row justify-content-end">
-            <label for="email">Email: </label>
-            <input class="form-control" type="email" name="email" placeholder="email@domain.com" style="width: 300px; margin: 1em">
-          </div>
-          <div class="form-inline row justify-content-end">
-            <label for="password">Password: </label>
-            <input class="form-control" type="password" name="password" placeholder="********" style="width: 300px; margin: 1em">
-          </div>
-          <div class="row justify-content-center">
-            <button type="submit" class="btn btn-primary" style="margin: 1em">Register</button>
-          </div>
-        </fieldset>
-      </form>
+  <main>
+    <div class="card mx-auto" style="min-width:28rem;max-width:60%;">
+      <div class="card-header" style="background:#E3E2DF">
+        <legend class="display-3 my-2 text-center">Register your account</legend>
+      </div>
+      <div class="card-body">
+        <div class="row justify-content-center my-3">
+          <form action="/register" method="POST">
+            <fieldset class="">
+              <div class="form-inline row justify-content-end">
+                <label for="email">Email: </label>
+                <div name="emailBlock">
+                  <input class="form-control mb-0" type="email" name="email" placeholder="email@domain.com" style="width: 300px; margin: 1em">
+                <small id="emailHelpBlock" class="form-text text-muted" style="margin-left: 1.75rem">
+                  Must enter a valid email address.
+                </small>
+                </div>
+              </div>
+              <div class="form-inline row justify-content-end">
+                <label for="passwordBlock">Password: </label>
+                <div name="passwordBlock">
+                  <input class="form-control mb-0" type="password" name="password" placeholder="********" style="width: 300px; margin: 1em">
+                  <small id="passwordHelpBlock" class="form-text text-muted" style="margin-left: 1.75rem">
+                    Your password must be 8-20 characters long.
+                  </small>
+                </div>
+              </div>
+              <div class="row justify-content-center">
+                <button type="submit" class="btn btn-outline" style="margin:1em;background-color:#9A1750;color:white">Submit</button>
+              </div>
+            </fieldset>
+          </form>
+        </div>
+      </div>
     </div>
   </main>
   <!-- Bootstrap JS -->
